# murkelhausen-data

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  flow.py  mkdocs.yml  murkelhausen-data.service  mypy.ini  prefect.conf  pyproject.toml  supervisord.conf
scripts/: conbee.sh  rasp_install.sh
src/murkelhausen/: __init__.py  backup.py  backup_postgres.sh  config.py  default.toml  download.py  flow.py  garmin_flow.py  pipeline.py  prefect_secret_block.py
src/murkelhausen/cli/: cli.py  cli_garmin.py
src/murkelhausen/garmin/: __init__.py  auth.py  explore.py  functions.py  main.py  objects.py
src/murkelhausen/garmin/example_payloads/: activities.json  body_battery.json  floors.json  heart_rates.json  hrv.json  respiration.json  sleep.json  spo2.json  stats.json  stats_and_body.json  steps.json  steps_daily.json  stress.json
src/murkelhausen/home/: deconz.py
src/murkelhausen/persistance_layer/: __init__.py  postgres.py  producer.py
src/murkelhausen/prefect/: flow_beowulf_backup.py  flow_data.py  prefect_secret_block.py  serve.py  subflow_garmin.py  tasks_garmin.py
src/murkelhausen/producer/: main.py
src/murkelhausen/util/: backend.py  logger.py  misc.py
src/murkelhausen/weather/: nmi.py  owm.py
tests/: conftest.py
tests/unit/app/: test_app.py
