[tool.poetry]
name = "murkelhausen"
version = "0.1.0"
description = ""
authors = ["Relativity74205 <arkadius@schuchhardt.com>"]

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
requests = "^2.27.1"
prefect = "^1.2.0"
pydantic = "^1.9.0"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
mypy = "^0.931"
black = "^22.1.0"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
types-requests = "^2.27.10"
types-toml = "^0.1.3"
mkdocs = "^1.2.3"
mkdocs-material = "^8.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
