[tool.poetry]
name = "murkelhausen"
version = "0.1.0"
description = ""
authors = ["Relativity74205 <arkadius@schuchhardt.com>"]

[tool.poetry.dependencies]
python = "^3.11"
#prefect = "^1.2.0"
pydantic = "^2.5.2"
typer = "^0.9.0"
pydantic-settings = "^2.1.0"
garminconnect = "^0.2.11"
python-dateutil = "^2.8.2"
confluent-kafka = "^2.3.0"
dataclasses-avroschema = "^0.54.2"

[tool.poetry.dev-dependencies]
#mypy = "^0.931"
#black = "^22.1.0"
#types-requests = "^2.27.10"
#types-toml = "^0.1.3"
#mkdocs = "^1.2.3"
#mkdocs-material = "^8.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
