[tool.poetry]
name = "murkelhausen"
version = "0.1.0"
description = ""
authors = ["Relativity74205 <arkadius@schuchhardt.com>"]

[tool.poetry.scripts]
murkelhausen = "murkelhausen.cli.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
garminconnect = "^0.2.11"
python-dateutil = "^2.8.2"
sqlalchemy = "^2.0.23"
psycopg = {version = "^3.1.16", extras = ["binary", "pool"]}
prefect = "^2.14.13"
prefect-shell = "^0.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
mypy = "^1.7.1"
black = "^23.12.0"
ruff = "^0.1.8"
types-python-dateutil = "^2.8.19.14"
#types-requests = "^2.27.10"
#types-toml = "^0.1.3"
#mkdocs = "^1.2.3"
#mkdocs-material = "^8.2.1"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "I"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
